--- a/styles/home.css
+++ b/styles/home.css
@@ -14,20 +14,17 @@
     box-sizing: border-box;
 }
 
-body {
-    font-family: var(--font-family);
-    background-color: var(--secondary-color);
-}
+
 
 /* Header Styles */
 header {
     background-color: var(--primary-color);
     color: white;
-    padding: 10px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: relative;
+    width: 100%;
 }
 
 .top-header {
@@ -39,8 +36,9 @@ header {
 
 .logo a {
     text-decoration: none;
-    font-size: 24px;
+    font-size: 1rem;
     color: white;
+    padding: 0.4rem;
 }
 
 .humburger {
@@ -48,6 +46,7 @@ header {
     flex-direction: column;
     gap: 5px;
     cursor: pointer;
+    padding: 0.4rem;
 }
 
 .humburger span {
@@ -72,12 +71,13 @@ nav.active{
     display: flex;
     justify-content: space-between;
     position: absolute;
-    top: 40px;
+    top: 6rem;
     left: 0;
     right: 0;
     padding: 10px 20px;
     border-top: 2px solid #fff;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(5px);
+    z-index: 1;
 }
 
 nav ul {
@@ -91,9 +91,10 @@ nav ul li {
 }
 
 nav ul li a {
-    color: var(--primary-color);
+    color: var(--secondary-color);
     text-decoration: none;
     font-size: 1.5rem;
+    text-shadow: 2px 1px 0 var(--primary-color);
 }
 
 nav ul li a:hover {
@@ -139,46 +140,27 @@ nav ul li a:hover {
 
 }
 
-
-
-/* Base styles */
-:root {
-    --primary-color: #1e3a8a; /* 60% */
-    --secondary-color: #e5e7eb; /* 30% */
-    --accent-color: #f59e0b; /* 5% */
-    --accent-color-2: #4b5563; /* 5% */
-    --font-family: 'Arial, sans-serif';
-    --text-color: #333;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 /* Hero Section */
 .hero {
     position: relative;
     background-color: var(--primary-color);
     color: white;
     text-align: center;
-    padding: 50px 20px;
     background: url(../images/hero1.jpg) no-repeat center/cover;
     width: 100%;
     height: 60vh;
-    margin-bottom: 8rem;
 }
 
 .school-title {
-    font-size: 1.7rem;
-    padding: 1rem 0.5rem 2rem 0.5rem;
+    display: flex;
+    font-size: 1.2rem;
+    padding: 1rem 0.1rem 1rem 0.1rem;
     border: 0.5px solid white;
     text-align: center;
-    margin: 0 0.5rem;
 }
 
 .cta-button {
+    display: none;
     position: absolute;
     background-color: var(--accent-color);
     color: white;
@@ -188,11 +170,12 @@ nav ul li a:hover {
     font-size: 10px;
     transition: background-color 0.3s ease;
     left: 0;
-    bottom: -7rem;
+    bottom: -5rem;
 
 }
 
 .hook-statement{
+    display: none;
     position: absolute;
     bottom: -3rem;
     left: 0;
@@ -202,7 +185,37 @@ nav ul li a:hover {
     color: var(--primary-color);
 }
 
-.cta-button:hover {
+/* Hero Section */
+.hero1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+}
+
+.cta-button1 {
+    display: block;
+    background-color: var(--accent-color);
+    color: white;
+    padding: 8px 15px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 10px;
+    transition: background-color 0.3s ease;
+    left: 0;
+
+}
+
+.hook-statement1{
+    display: flex;
+    text-align: center;
+    font-size: 1.7rem;
+    font-family: Helvetica, sans-serif;
+    color: var(--primary-color);
+}
+
+.cta-button1:hover {
     background-color: var(--accent-color-2);
 }
 
@@ -309,11 +322,22 @@ nav ul li a:hover {
 .testimonial p {
     font-size: 16px;
     line-height: 1.5;
-    color: var(--accent-color-2);
+    color: var(--secondary-color);
 }
 
-.testimonials .cta-button {
-    margin-top: 20px;
+.testimony-button {
+    color: var(--secondary-color);
+    text-decoration: none;
+}
+
+.more-testimony{
+    display: inline-block;
+    background-color: var(--accent-color);
+    color: white;
+    padding: 3px 5px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
 }
 
 /* Faculty Section */
@@ -358,6 +382,10 @@ nav ul li a:hover {
     margin-bottom: 20px;
 }
 
+.event p {
+    color: var(--secondary-color);
+}
+
 .event {
     margin-bottom: 20px;
 }
@@ -371,11 +399,22 @@ nav ul li a:hover {
 .event p {
     font-size: 16px;
     line-height: 1.5;
-    color: var(--accent-color-2);
+    color: var(--secondary-color);
 }
 
-.events .cta-button {
-    margin-top: 20px;
+.more-events{
+    display: inline-block;
+    background-color: var(--accent-color);
+    color: white;
+    padding: 3px 5px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.events-button {
+    color: var(--secondary-color);
+    text-decoration: none;
 }
 
 /* Contact Section */
@@ -413,11 +452,12 @@ footer {
 .footer-section h3 {
     font-size: 18px;
     margin-bottom: 10px;
+    color: var(--accent-color);
 }
 
-.footer-section p, .footer-section ul li a {
+.footer-section p, .footer-section ul li a, .donate {
     font-size: 16px;
-    color: var(--accent-color-2);
+    color: var(--secondary-color);
 }
 
 .footer-section ul {
